# full-text-search

./: .gitignore  README.md  docker-compose.yml
backend/: Dockerfile  manage.py  pyproject.toml  setup.cfg
backend/catalog/: __init__.py  admin.py  apps.py  filters.py  models.py  serializers.py  signals.py  tests.py  urls.py  views.py
backend/catalog/fixtures/: test_wines.json
backend/catalog/migrations/: 0001_initial.py  0002_auto_20210401_2018.py  0003_search_vector.py  0004_update_search_vector.py  0005_winesearchword.py  __init__.py
backend/catalog/tests/: test_wines.py
backend/full_text_search/: __init__.py  asgi.py  settings.py  urls.py  wsgi.py
frontend/: Dockerfile  package-lock.json  package.json
frontend/cypress/fixtures/: wine_search_words.json  wines.json
frontend/cypress/integration/: all.spec.js
frontend/public/: index.html
frontend/src/: App.js  index.js
frontend/src/components/: Search.js
